# app-store-scraper

./: Cargo.toml  README.md  app_ids.txt
src/: main.rs
