[package]
name = "app-store-scraper"
version = "0.1.0"
authors = ["Stuart Axelbrooke <stuart@axelbrooke.com>"]
edition = "2018"

[dependencies]

rusqlite = { version = "0.17", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.6"
reqwest = "0.9"
xmltree = "0.8"
backoff = "0.1"
clap = "2.32.0"
prometheus = "0.5"
hyper = "0.12"
lazy_static = "0.1"
